# ExcelDeepClean

./: .gitignore  README.md  README_zh-CN.md  inspect_excel.py  pyproject.toml  test_data.xlsx
.trae/documents/: AI 清洗逻辑深度优化计划.md  AI 驱动的表格语义切分与清洗优化计划.md  Excel复杂表格自动识别与规范化提取器（Python+uv）.md  README 专业化与双语支持计划.md  README 中文化与内容增强计划.md  优化表头合并与空白列移除计划.md  修复 Section Header 识别遗漏计划.md  利用 AI 自动清洗无效数据.md  文档国际化拆分与数据隐私保护计划.md  最终清理与提交计划.md  项目清理与 GitHub 推送准备.md
.trae/rules/: qveris.md
docs/: design.md
src/excel_table_extractor/: cli.py
src/excel_table_extractor/ai/: processor.py
src/excel_table_extractor/core/: detector.py  excel_writer.py  extractor.py  models.py  reader.py  writers.py
src/excel_table_extractor/utils/: xlsx_utils.py
tests/: test_integration.py
